# web-quiz

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  diesel.toml
content/public/html/static/: index.html  login.html
content/public/html/templates/: admin.html.tera  admin_error.html.tera  end.html.tera  failed.html.tera  play.html.tera  play_error.html.tera  start_name.html.tera
content/public/html/templates/macros/: format_macros.html.tera  table_macros.html.tera
content/public/static/js/: admin.js  joker.js  timer.js
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-02-01-171259_create_tables/: down.sql  up.sql
migrations/2020-02-13-205341_create_admin_table/: up.sql
migrations/2020-02-24-091115_add_scores_columns/: down.sql  up.sql
src/: main.rs
src/models/: account.rs  game.rs  mod.rs  stopwatch.rs  tera.rs  web.rs
src/models/db/: conn.rs  mod.rs  models.rs  ops.rs  schema.rs
src/models/web/: auth.rs  misc.rs  mod.rs  state.rs
src/routing/: catchers.rs  general.rs  mod.rs
src/routing/pages/: admin.rs  mod.rs  play.rs  start.rs
