[package]
name = "quiz"
version = "0.1.0"
authors = ["reslario <simon.kunze2310@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
once_cell = "1.3.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]
