[package]
name = "quiz"
version = "0.1.0"
authors = ["reslario <simon.kunze2310@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
once_cell = "1.3.1"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["handlebars_templates", "serve"]

[dependencies.diesel]
version = "1.4.3"
default-features = false
features = ["postgres"]
