[package]
name = "quiz"
version = "0.1.0"
authors = ["reslario <simon.kunze2310@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
once_cell = "1.3.1"
dotenv = "0.15.0"
serde = { version = "1.0.104", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4"] }
owning_ref = "0.4.0"
derive_more = "0.99.2"
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve", "diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.3"
default-features = false
features = ["postgres"]